# codex_write_IDE

./: .gitignore  CMakeLists.txt  README.md  bug.txt  plan.md
src/: BuildManager.cpp  BuildManager.h  CodeEditor.cpp  CodeEditor.h  CppRusticHighlighter.cpp  CppRusticHighlighter.h  FindReplaceDialog.cpp  FindReplaceDialog.h  GdbMiClient.cpp  GdbMiClient.h  LspClient.cpp  LspClient.h  MainWindow.cpp  MainWindow.h  ProjectManager.cpp  ProjectManager.h  ProjectSettingsDialog.cpp  ProjectSettingsDialog.h  ShortcutSettingsDialog.cpp  ShortcutSettingsDialog.h  main.cpp
